feat: 로또 결과를 번환하기 위한 description을 생성하는 기능 추가