@@ -6,6 +6,7 @@ import java.util.Map;
 import java.util.stream.Collectors;
 import lotto.Lotto;
 import lotto.domain.constant.LottoRank;
+import lotto.dto.LottoResultDto;
 
 public class ScoreBoard {
     private final List<Lotto> lottos;
@@ -18,14 +19,13 @@ public class ScoreBoard {
         this.rankCounts = initRankCounts();
     }
 
-    public Map<LottoRank, Integer> calculateRanks() {
+    private void calculateRanks() {
 
         Map<LottoRank, Integer> calculatedRanks = lottos.stream()
                 .map(lotto -> lotto.getRank(winning))
                 .collect(Collectors.groupingBy(rank -> rank, Collectors.summingInt(rank -> 1)));
 
         rankCounts.putAll(calculatedRanks);
-        return rankCounts;
 
     }
 
@@ -39,10 +39,17 @@ public class ScoreBoard {
         return rankCounts;
     }
 
-    public List<String> lottoResult() {
-        return lottos.stream()
-                .map(lotto -> lotto.getNumbers().toString())
-                .collect(Collectors.toList());
+    public List<LottoResultDto> returnStatistics() {
+        calculateRanks();
+
+        return rankCounts.entrySet().stream()
+                .filter(this::isValidRank)
+                .map(LottoResultDto::from)
+                .toList();
+    }
+
+    private boolean isValidRank(Map.Entry<LottoRank, Integer> entry) {
+        return entry.getKey() != LottoRank.NONE;
     }
 
 }
